fix(library): import button visible when loading

--- a/src/renderer/src/features/library-view/components/library-loading/LibraryLoading.module.scss
+++ b/src/renderer/src/features/library-view/components/library-loading/LibraryLoading.module.scss
@@ -8,6 +8,8 @@
    display: grid;
    grid-template-rows: 1fr max-content max-content 1fr;
 
+   z-index: 5;
+
    background: var(--BG);
  }
 
